💄 fix: change align-items property value from start to flex-start

--- a/src/css/skills.css
+++ b/src/css/skills.css
@@ -19,7 +19,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
   filter: drop-shadow(0px 0px 10px rgba(28, 28, 51, 0.15));
 }
 
